--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 unity_packages/*.unitypackage filter=lfs diff=lfs merge=lfs -text
 unity_packages/*.zip filter=lfs diff=lfs merge=lfs -text
 unity_packages/*.rar filter=lfs diff=lfs merge=lfs -text
+*.iso filter=lfs diff=lfs merge=lfs -text
